images no longer stretch for recipe cards and recipe modals

--- a/src/styles/components/_recipeModal.scss
+++ b/src/styles/components/_recipeModal.scss
@@ -1,4 +1,7 @@
 .recipeModal {
+  &__img {
+    object-fit: cover;
+  }
   &__body {
     max-height: 30vh;
     overflow-y: scroll;
